--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,8 @@
       <div class="site-branding">
         <p class="site-logo">
           <a href="{{ '/' | relative_url }}"><img src="{{ site.header.logo_img | relative_url }}" alt="{{ site.header.logo_img_alt }}" /></a>
-        </p>
-        <p class="site-title"><a href='{{ '/' | relative_url }}'>{{ site.header.title }}</a></p>
+<a href='{{ '/' | relative_url }}'>{{ site.header.title }}</a>       
+ </p>
       </div><!-- .site-branding -->
       {% assign has_nav_is_not_empty = site.header.has_nav | is_not_empty %}
       {% if has_nav_is_not_empty %}
