--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -44,3 +44,4 @@ $palette: (
 @import "imports/footer";
 @import "imports/palettes";
 @import "imports/banner";
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@600&display=swap');
