--- a/_sass/imports/_header.scss
+++ b/_sass/imports/_header.scss
@@ -37,6 +37,7 @@
 
 .site-title {
   color: #9966ff;
+  font-family: 'Work Sans', sans-serif;
   font-size: 1.22222em;
   font-weight: bold;
   line-height: 1.1;
