--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -22,7 +22,7 @@ $palette: (
   accent:            #d8195e,
   accent-blue:       #0c8aea,
   accent-green:      #0da5b1,
-  accent-violet:     #7c43a8,
+  accent-violet:     #9966ff,
   accent-yellow:     #ed9700
 );
 
