--- a/_sass/imports/_sections.scss
+++ b/_sass/imports/_sections.scss
@@ -105,7 +105,11 @@
   }
 
   .block-title {
-    font-size: 2.44444em;
+    font-color: #9966ff
+    font-size: 2.5em;
+  }
+  .block-image {
+    float: right;
   }
 }
 
